objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Self Registration</fullName>
        <description>Processing a Lead that is generated from the FoundryView self registration for customers</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Partner Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted for Review</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Enablement Partner</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Internal</fullName>
                </value>
                <value>
                    <fullName>Suppliers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <description>Any Additional Comments from the customer coming from the web to lead</description>
        <inlineHelpText>Please provide any additional comments.</inlineHelpText>
        <label>Additional Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aggregated_SAM_USD__c</fullName>
        <label>Aggregated SAM USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <label>Bill To Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2__c</fullName>
        <label>Bill To Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_3__c</fullName>
        <label>Bill To Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_To_Location__c</fullName>
        <label>Bill To Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Postal_Zip_Code__c</fullName>
        <label>Bill To Postal/Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bill_To_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Sales</fullName>
                </value>
                <value>
                    <fullName>International Sales</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Enter the date the Design Win is expected to be closed. For reports, the close date will be aligned to the fiscal quarter.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_s_Short_Name__c</fullName>
        <description>FV2 : Used for storing the value of company&apos;s short name registered with GLOBALFOUNDRIES.</description>
        <label>Company&apos;s Short Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Bill_To_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Bill To Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CorporateAddress1Replicate__c</fullName>
        <description>FV2 : This field is created to map Lead field &apos;Corporate Address 1&apos; to Contact.</description>
        <label>CorporateAddress1Replicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateAddress2Replicate__c</fullName>
        <description>FV2 : This field is used for mapping Contact field &apos;Corporate Address 2&quot; from Lead.</description>
        <label>CorporateAddress2Replicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateAddress3Replicate__c</fullName>
        <description>FV2 : This field is used for mapping Contact field &apos;Corporate Address 3&quot; from Lead.</description>
        <label>CorporateAddress3Replicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateCityReplicate__c</fullName>
        <description>FV2 : This field is used for mapping Contact field &apos;Corporate City&quot; from Lead.</description>
        <label>CorporateCityReplicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateCountryReplicate__c</fullName>
        <description>FV2 : This field is used for mapping Contact field &apos;Corporate Country&quot; from Lead.</description>
        <label>CorporateCountryReplicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporatePostalCodeReplicate__c</fullName>
        <description>FV2 : This field is used for mapping Contact field &apos;Corporate Postal Code&quot; from Lead.</description>
        <label>CorporatePostalCodeReplicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorporateStateReplicate__c</fullName>
        <description>FV2 : This field is used for mapping Contact field &apos;Corporate State&quot; from Lead.</description>
        <label>CorporateStateReplicate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_1__c</fullName>
        <label>Corporate Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_2__c</fullName>
        <label>Corporate Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Address_3__c</fullName>
        <label>Corporate Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_City__c</fullName>
        <label>Corporate City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Country__c</fullName>
        <label>Corporate Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Postal_Zip_Code__c</fullName>
        <label>Corporate Postal/Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_State__c</fullName>
        <label>Corporate State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Corporate_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Id__c</fullName>
        <label>Created By Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPL_HelperFld__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denied Partlist helper field,to avoid multiple triggering</description>
        <label>DPL HelperFld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>FV2 : Used for storing the value of Department from Web to Lead.</description>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Application_for_Lead__c</fullName>
        <description>End Application entered in Lead to be converted to Opportunity</description>
        <label>End Application for Lead</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Handset</fullName>
                </value>
                <value>
                    <fullName>Mobile PC</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Others-Mobility</fullName>
                </value>
                <value>
                    <fullName>Powertrain</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Driver Information</fullName>
                </value>
                <value>
                    <fullName>Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Others - Automotive</fullName>
                </value>
                <value>
                    <fullName>Broadband Client</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Others - CCS</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Security &amp; Energy</fullName>
                </value>
                <value>
                    <fullName>Smart Card</fullName>
                </value>
                <value>
                    <fullName>Others - IMS</fullName>
                </value>
                <value>
                    <fullName>Desktop PC</fullName>
                </value>
                <value>
                    <fullName>Set Top Box</fullName>
                </value>
                <value>
                    <fullName>Video Games</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Others - Consumer</fullName>
                </value>
                <value>
                    <fullName>Test Chip</fullName>
                </value>
                <value>
                    <fullName>Others - AD</fullName>
                </value>
                <value>
                    <fullName>Machine Learning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <label>End Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FE_Territory__c</fullName>
        <label>FE Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>APJ-FE-CHINA</fullName>
                </value>
                <value>
                    <fullName>APJ-FE-JAPAN</fullName>
                </value>
                <value>
                    <fullName>APJ-FE-TAIWAN-KOREA-ROA</fullName>
                </value>
                <value>
                    <fullName>EUR-FE</fullName>
                </value>
                <value>
                    <fullName>US-FE-AMD</fullName>
                </value>
                <value>
                    <fullName>US-FE-BRCM</fullName>
                </value>
                <value>
                    <fullName>US-FE-East</fullName>
                </value>
                <value>
                    <fullName>US-FE-QCOM</fullName>
                </value>
                <value>
                    <fullName>US-FE-West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab_Assignment_1__c</fullName>
        <label>Fab Assignment 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 4</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GF_Target_Share__c</fullName>
        <description>GF target share percentage of the total market value. Entry for the lead to be converted to the opportunity</description>
        <inlineHelpText>Also known as SOM (Serviceable Obtainable Market). Enter the target share of the program that GLOBALFOUNDRIES is pursuing. The Total Program Value X GF Target Share = GF Opportunity Size. This is a required field prior to submission for Design Win Award.</inlineHelpText>
        <label>GF Target Share %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geometry_Requested_by_Customer__c</fullName>
        <label>Geometry Requested by Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.086UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.17UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
                <value>
                    <fullName>0.45UM</fullName>
                </value>
                <value>
                    <fullName>0.50UM</fullName>
                </value>
                <value>
                    <fullName>0.60UM</fullName>
                </value>
                <value>
                    <fullName>0.70UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hot_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hot Lead</description>
        <inlineHelpText>Hot Lead</inlineHelpText>
        <label>Hot Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_GLOBALFOUNDRIES__c</fullName>
        <description>Identifies how the customer heard about our company.</description>
        <inlineHelpText>How did you first hear about GLOBALFOUNDRIES?</inlineHelpText>
        <label>How did you hear about GLOBALFOUNDRIES?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Colleague from my Company</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Event</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Employee</fullName>
                </value>
                <value>
                    <fullName>GLOBALFOUNDRIES Partner</fullName>
                </value>
                <value>
                    <fullName>Press Announcement</fullName>
                </value>
                <value>
                    <fullName>Reputation in the Industry</fullName>
                </value>
                <value>
                    <fullName>Trade show</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comment)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Account_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_Name__c</fullName>
        <label>Lead Stage Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Discovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>